[metadata]
name = varion
version = 0.1.0
author = BrightMinding
description = High-quality hybrid random number generator for scientific computing
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/brightminding/varion
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    numba